          Babej).
- TW-1455 Filter parser does not properly handle parentheses in attributes
          (thanks to Tomas Babej).
- TW-1456 Filter parser does not always handle multiple arguments bundled into
          one with apostrophes (thanks to Tomas Babej).
- TW-1466 UDA with type duration is stored as text/string (thanks to Thomas
          Sullivan).
- TW-1475 task config expands values with unnecessary spaces (thanks to Tomas
          Babej).
- TW-1478 due:easter sets the easter of the current year regardless of the date
          (thanks to David Costa).
- TW-1479 Task arguments not properly parsed if they contain a space (thanks to
          Tomas Babej).
- TW-1480 Weird behaviour on redundant filter beginning with number (thanks to
          Tomas Babej).
- TW-1485 can't delete recurring tasks (except by workaround) (thanks to
          Dustin J. Mitchell).
- TW-1488 You have more urgent tasks (thanks to Stefan Betz, Denis Kasak).
- TW-1511 Project titles not properly parsed if they contain hyphens (thanks to
          Leon Feng, Blake Sweeney, Dylan Mikus).
- TW-1515 abbreviation.minimum does not apply to date recognition (thanks to
          Lars Beckers).
- TW-1521 task project!=PROJECTNAME does not work (Regression) (thanks to
          Florian Petry).
- TW-1527 Extra spaces added around slashes (thanks to Renato Alves).
- TW-1529 Parser incorrectly inserting spaces into task description (thanks to
          David Brenner).
- TW-1543 cmake complains "test" is not a valid target (on arch linux) (thanks
          to Renato Alves).
- TW-1553 Setting defaultheight:0 makes burndown command hang (thanks to Tomas
          Babej).
- TW-1569 update wait:<wait-date> manpage entry (thanks to David Patrick).
- TW-1572 Better urgency inheritance (thanks to Jens Erat).
- TW-1575 `task log` mangles URLs when quoted (thanks to Luke Macken).
- TW-1592 Able to add duplicate tags using 'tags:<value>' (thanks to Tomas
          Babej).